legend-pure-rust/crates/dsl-graph/tests/snapshots/parser_grammar_tests__subtype_not_at_root_error.snap
---
source: crates/dsl-graph/tests/parser_grammar_tests.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "test",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 14,
                                end_line: 2,
                                end_column: 17,
                            },
                        },
                        type_parameters: [],
                        multiplicity_parameters: [],
                        parameters: [],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "Any",
                                type_arguments: [],
                                multiplicity_arguments: [],
                                type_variable_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 22,
                                    end_line: 2,
                                    end_column: 24,
                                },
                            },
                        ),
                        return_multiplicity: ZeroOrMany,
                        constraints: [],
                        body: [
                            ArrowFunction(
                                ArrowFunction {
                                    target: MemberAccess(
                                        Qualified(
                                            QualifiedMemberAccess {
                                                target: PackageableElementRef(
                                                    PackageableElementRef {
                                                        element: PackageableElementPtr {
                                                            package: Some(
                                                                Package {
                                                                    name: "my",
                                                                    parent: None,
                                                                    source_info: SourceInfo {
                                                                        source: "test.pure",
                                                                        start_line: 4,
                                                                        start_column: 5,
                                                                        end_line: 4,
                                                                        end_column: 6,
                                                                    },
                                                                },
                                                            ),
                                                            name: "Firm",
                                                            source_info: SourceInfo {
                                                                source: "test.pure",
                                                                start_line: 4,
                                                                start_column: 5,
                                                                end_line: 4,
                                                                end_column: 6,
                                                            },
                                                        },
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 4,
                                                            start_column: 5,
                                                            end_line: 4,
                                                            end_column: 6,
                                                        },
                                                    },
                                                ),
                                                member: "all",
                                                arguments: [],
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 4,
                                                    start_column: 13,
                                                    end_line: 4,
                                                    end_column: 13,
                                                },
                                            },
                                        ),
                                    ),
                                    function: PackageableElementPtr {
                                        package: None,
                                        name: "graphFetch",
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 21,
                                            end_line: 4,
                                            end_column: 30,
                                        },
                                    },
                                    arguments: [
                                        Island(
                                            IslandExpression {
                                                tag: "",
                                                content: RootGraphFetchTree {
                                                    class: PackageableElementPtr {
                                                        package: Some(
                                                            Package {
                                                                name: "my",
                                                                parent: None,
                                                                source_info: SourceInfo {
                                                                    source: "test.pure",
                                                                    start_line: 6,
                                                                    start_column: 13,
                                                                    end_line: 6,
                                                                    end_column: 14,
                                                                },
                                                            },
                                                        ),
                                                        name: "Firm",
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 6,
                                                            start_column: 13,
                                                            end_line: 6,
                                                            end_column: 14,
                                                        },
                                                    },
                                                    sub_trees: [
                                                        PropertyGraphFetchTree {
                                                            property: "name",
                                                            parameters: [],
                                                            alias: None,
                                                            sub_type: None,
                                                            sub_trees: [],
                                                            sub_type_trees: [
                                                                SubTypeGraphFetchTree {
                                                                    sub_type_class: PackageableElementPtr {
                                                                        package: Some(
                                                                            Package {
                                                                                name: "my",
                                                                                parent: None,
                                                                                source_info: SourceInfo {
                                                                                    source: "test.pure",
                                                                                    start_line: 8,
                                                                                    start_column: 30,
                                                                                    end_line: 8,
                                                                                    end_column: 31,
                                                                                },
                                                                            },
                                                                        ),
                                                                        name: "SubType",
                                                                        source_info: SourceInfo {
                                                                            source: "test.pure",
                                                                            start_line: 8,
                                                                            start_column: 29,
                                                                            end_line: 8,
                                                                            end_column: 29,
                                                                        },
                                                                    },
                                                                    sub_trees: [
                                                                        PropertyGraphFetchTree {
                                                                            property: "SubTypeName",
                                                                            parameters: [],
                                                                            alias: None,
                                                                            sub_type: None,
                                                                            sub_trees: [],
                                                                            sub_type_trees: [],
                                                                            source_info: SourceInfo {
                                                                                source: "test.pure",
                                                                                start_line: 9,
                                                                                start_column: 25,
                                                                                end_line: 9,
                                                                                end_column: 35,
                                                                            },
                                                                        },
                                                                    ],
                                                                    sub_type_trees: [],
                                                                    source_info: SourceInfo {
                                                                        source: "test.pure",
                                                                        start_line: 8,
                                                                        start_column: 21,
                                                                        end_line: 8,
                                                                        end_column: 27,
                                                                    },
                                                                },
                                                            ],
                                                            source_info: SourceInfo {
                                                                source: "test.pure",
                                                                start_line: 7,
                                                                start_column: 17,
                                                                end_line: 7,
                                                                end_column: 20,
                                                            },
                                                        },
                                                    ],
                                                    sub_type_trees: [],
                                                    source_info: SourceInfo {
                                                        source: "test.pure",
                                                        start_line: 6,
                                                        start_column: 13,
                                                        end_line: 6,
                                                        end_column: 14,
                                                    },
                                                },
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 5,
                                                    start_column: 9,
                                                    end_line: 5,
                                                    end_column: 10,
                                                },
                                            },
                                        ),
                                    ],
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 13,
                                        end_line: 14,
                                        end_column: 5,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 15,
                            end_column: 1,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
